@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 1.021
 
+- installer/instcheck program libraries now optionally install into a
+  prefix directory specified on the command line.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
